# Escoba15

./: .clang-format  .clangd  CMakeLists.txt
src/: cartas.h  main.cpp
